<resources>
    <string name="app_name">Anxiety Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="patients_title">Listado Pacientes</string>
    <string name="therapist_title">Listado Terapeutas</string>
    <string name="user_username">Nombre de Usuario</string>
    <string name="user_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_settings_principal">Log out...</string>
    <string name="add_therapist_sub_title">Agregar Terapeuta</string>
    <string name="add_therapist_label_first_name">Nombre Terapeuta</string>
    <string name="add_therapist_label_last_name">Apellido Terapeuta</string>
    <string name="add_therapist_label_user_name">Nombre Usuario</string>
    <string name="add_therapist_label_password">Contraseña</string>
    <string name="add_therapist_label_repeat_password">Repetir Contraseña</string>
    <string name="patient_list_first_time_text">Para agregar un paciente nuevo presione el botón de agregar</string>
    <string name="patient_list_first_time_button">Ok Entendido</string>
    <string name="dasa_button_first_time_text">Para agregar un nuevo registro de diario presiona este botón.\n\n
        Los registros del diario sirven para poder saber dia a dia el avance o retroceso de tu nivel de ansiedad.\n\n
        El diário solamente se puede llenar una vez al día, de preferencia antes de dormir.\n\n
        En caso de que se te olvide, la aplicación te recordará llenarlo en la noche.
    </string>
    <string name="categories_button_first_time_text">Para agregar un nuevo registro de crísis de ansiedad, presiona éste botón.\n\n
        La información de los registros sirven para poder saber en qué categorías se divide tu ansiedad generalizada y poder así ver qué es lo que mas te preocupa.\n\n
        Al saber que categorías acaparan mas tu ansiedad, se puede saber de mejor manera que aspectos atender con prioridad.\n\n
        Puedes utilizar este reporte las veces que consideres necesario.
    </string>
    <string name="main_activity_first_time_text">Para agregar un nuevo reporte presione este boton</string>
    <string name="main_activity_first_time_button">Ok Entendido</string>
    <string name="add_patient_sub_title">Agregar Paciente</string>
    <string name="add_patient_label_first_name">Nombre Paciente</string>
    <string name="add_patient_label_last_name">Apellido Paciente</string>
    <string name="add_patient_label_user_name">Nombre Usuario</string>
    <string name="add_patient_label_password">Contraseña</string>
    <string name="add_patient_label_repeat_password">Repetir Contraseña</string>
    <string name="add_dasa_sub_title">Durante las últimas 24 horas...</string>
    <string name="dasa_label_1">¿Cuánta ansiedad ha sentido en promedio?</string>
    <string name="dasa_label_1_1">Sin ansiedad</string>
    <string name="dasa_label_1_2">Ansiedad moderada</string>
    <string name="dasa_label_1_3">Ansiedad extrema</string>
    <string name="dasa_label_2">¿Cuánta ansiedad ha sentido en su momento de mayor ansiedad?</string>
    <string name="dasa_label_2_1">Sin ansiedad</string>
    <string name="dasa_label_2_2">Ansiedad moderada</string>
    <string name="dasa_label_2_3">Ansiedad extrema</string>
    <string name="dasa_label_3">¿Cuánta preocupación ha sentido en promedio?</string>
    <string name="dasa_label_3_1">Sin preocupación</string>
    <string name="dasa_label_3_2">Preocupación moderada</string>
    <string name="dasa_label_3_3">Preocupación extrema</string>
    <string name="dasa_label_4">¿Con qué frecuencia se sintió tenso (cuando estaba despierto)?</string>
    <string name="dasa_label_4_1">Nunca</string>
    <string name="dasa_label_4_2">Como la mitad de las veces</string>
    <string name="dasa_label_4_3">Siempre</string>
    <string name="dasa_label_5">¿Cuánta irritabilidad sintió en su momento de mayor irritabilidad?</string>
    <string name="dasa_label_5_1">Sin irritabilidad</string>
    <string name="dasa_label_5_2">Irritabilidad moderada</string>
    <string name="dasa_label_5_3">Irritabilidad extrema</string>
    <string name="dasa_label_6">¿Con qué frecuencia se sintió tranquilo o relajado (cuando estaba despierto)?</string>
    <string name="dasa_label_6_1">Nunca</string>
    <string name="dasa_label_6_2">Como la mitad de las veces</string>
    <string name="dasa_label_6_3">Siempre</string>
    <string name="dasa_label_7">¿Con qué frecuencia tuvo dificultades para concentrarse o enfocarse en lo que estaba haciendo (cuando estaba despierto)?</string>
    <string name="dasa_label_7_1">Nunca</string>
    <string name="dasa_label_7_2">Como la mitad de las veces</string>
    <string name="dasa_label_7_3">Siempre</string>
    <string name="dasa_label_8">¿Cuánta dificultad tuvo para quedarse dormido anoche?</string>
    <string name="dasa_label_8_1">Sin dificultad</string>
    <string name="dasa_label_8_2">Dificultad moderada</string>
    <string name="dasa_label_8_3">Dificultad extrema</string>
    <string name="title_activity_login_principal">Sign in</string>
    <string name="title_activity_add_catego">Reporte de Crisis</string>
    <string name="catego_label_1">Categoría relacionada</string>
    <string name="catego_label_2">Severidad de Crisis</string>
    <string name="catego_label_2_1">Ligera</string>
    <string name="catego_label_2_2">Regular</string>
    <string name="catego_label_2_3">Severa</string>
    <string name="catego_label_3">Detalle de Crisis</string>
    <string name="catego_result_insert_positive">Reporte agregado, Gracias!</string>
    <string name="catego_result_insert_negative">Hubo un error en el reporte :(</string>
    <string name="new_catego_dialog_message">Escribe un nombre para la nueva categoría</string>
    <string name="new_catego_dialog_title">Nueva Categoría</string>
    <string name="new_catego_dialog_okbutton">Agregar</string>
    <string name="new_catego_dialog_cancelbutton">Cancelar</string>
    <string name="no_info">No hay informacion</string>
    <string name="detail_label">Informacion Detalle</string>
    <string name="view_catego_dialog_title">Entrada Crisis</string>
    <string name="view_catego_dialog_cancelbutton">Cerrar</string>
    <string name="view_dasa_dialog_title">Entrada Diario</string>
    <string name="view_dasa_dialog_cancelbutton">Cerrar</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Se borraran los datos del usuario y se cerrara la aplicación</string>
    <string name="logout_dialog_okbutton">Logout</string>
    <string name="logout_dialog_cancelbutton">Cancelar</string>
    <string name="respiration_dialog_title">Gracias!</string>
    <string name="respiration_dialog_message">Muchas gracias por llenar el reporte.\n\nSabemos que es un proceso complicado y queremos ofrecerte un ejercicio de respiracion para relajacion.\n\nSi no deseas usarlo puedes presionar en \"Después\"</string>
    <string name="respiration_dialog_okbutton">Entrar</string>
    <string name="respiration_dialog_cancelbutton">Después</string>
    <string name="anxiety_game_title">Respira profundo</string>
    <string name="intro_respiration">
        La parte autonómica de tu sistema nervioso tiene el trabajo de mantener el control de tu corazón, respiración y otros procesos del cuerpo durante la calma, el estrés interrumpe dichas funciones.\n\n
        Una manera de bloquear tu estrés es aprender a modificar dichos procesos, la respiración es el más accesible de los procesos, si aprendes a regresarla a su control autonómico, tendrás una poderosa herramienta de relajación.\n\n
        Siéntate comfortablemente en una posición que puedas mantener sin mucho movimiento adicional.\n\n
        Utiliza este ejercicio en cualquier situación que te pueda generar estrés: tráfico, aviones, durante un trabajo demandante o actividades sociales, anticipando eventos estresantes. Duerme una hora extra y trata de eliminar la cafeína, y alcohol de tu dieta.\n\n
        Reduce gradualmente la cantidad de tiempo en tu actividad estresante hasta un 20%.
    </string>
    <string name="stop_message">Suelta el boton y exhala...</string>
    <string name="stop_quote">¡Detente! Para tu respiración y deja que comience a su manera.</string>
    <string name="first_instruction">Para comenzar, presiona el circulo rojo y comienza a respirar por la nariz.</string>
    <string-array name="anxiety_quotes">
        <item>Lo mejor que se puede hacer para reducir el estrés e iniciar a relajarse es  el incrementar el control sobre tus pensamientos.</item>
        <item>Los pensamientos innecesarios, generan un estímulo para el cuerpo, presentando una reacción de estrés y al repetirse una y otra vez, generan ansiedad.</item>
        <item>Cuando estás distraído o cuando tienes muchos pensamientos innecesarios, eres más ineficiente y tu mente tiene que trabajar más pesado para cumplir con las responsabilidades diarias.</item>
        <item>Mientras estás respirando, detecta los pensamientos que pueden estarte molestando y piensa en qué quieres hacer con ellos, utilizando los mismos enunciados cada que se vengan a la mente: “quiero estar relajado y tranquilo”.</item>
        <item>Enfocar tu atención, reduce tu diálogo interno, ayuda a tener un sentido interno de ti haciendo este ejercicio. El sentido de ti mismo viene de tu mente, cualquier pensamiento puede ser controlado por ti, así como tu destino.</item>
        <item>Respira y nota conscientemente tu respiración dentro y fuera de tu cuerpo. Escucha el sonido del aire que pasa por tu nariz y siente como tu respiración sale por tus fosas nasales. En este momento estarás en un control consciente de tu respiración.</item>
        <item>Listo! puedes continuar usando el ejercicio de respiracion. Cuando quieras terminar presiona el boton de "atras"</item>
    </string-array>
    <string-array name="anxiety_quotes2">
        <item>I, not events, have the power to make me happy or unhappy today. I can choose which it shall be. Yesterday is dead, tomorrow hasn\'t arrived yet. I have just one day, today, and I\'m going to be happy in it.</item>
        <item>Politics is the art of looking for trouble, finding it everywhere, diagnosing it incorrectly and applying the wrong remedies.</item>
        <item>A black cat crossing your path signifies that the animal is going somewhere.</item>
        <item>Humor is reason gone mad.</item>
    </string-array>
    <string-array name="month_names">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="title_activity_final_instrument_patient">Evaluacion Final</string>
    <string name="final_instrument_patient_intro_1">Este cuestionario se ha diseñado para medir el nivel de percepción sobre el uso y utilidad de la aplicación “monitor de ansiedad”.</string>
    <string name="final_instrument_patient_intro_2">Favor de contestar las preguntas tomando en cuenta su experiencia durante el uso de la aplicación.</string>
    <string name="final_instrument_patient_intro_3">Muchas gracias!</string>
    <string name="final_instrument_patient_intro_4">La primera parte consiste en medir los aspectos de facilidad de uso de la aplicación</string>
    <string name="final_instrument_patient_intro_5">La segunda parte consiste en medir la utilidad de la información que en ella se muestra para fines de mejorar el tratamiento</string>
    <string name="final_instrument_patient_intro_6">La tercera parte consiste en medir la percepción de utilidad de los módulos usados durante la terapia.</string>
</resources>