<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bluecoreservices.anxietymonitor2.add_catego"
    tools:showIn="@layout/activity_add_catego"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="100dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"
            android:elevation="14dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="1."
                        android:layout_gravity="left" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="@string/catego_label_1"
                        android:paddingLeft="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:paddingRight="20dp">
                        <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_catego"
                        android:layout_gravity="center"
                            android:layout_centerInParent="true"
                            android:layout_alignParentStart="true" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/add_catego_nombre"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_add_circle"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="false"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentEnd="true"
                        android:breakStrategy="high_quality"
                        android:gravity="center_vertical|center_horizontal"
                        android:hapticFeedbackEnabled="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"
            android:elevation="14dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="2."
                        android:layout_gravity="left" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="@string/catego_label_2"
                        android:paddingLeft="10dp" />
                </LinearLayout>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_catego_severidad"
                    android:layout_marginBottom="25dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="fill_horizontal|bottom">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="right"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/catego_label_2_1"
                            android:textSize="@dimen/small_label_size"
                            android:layout_gravity="left"
                            android:gravity="left" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/catego_label_2_2"
                            android:textSize="@dimen/small_label_size"
                            android:layout_gravity="center"
                            android:gravity="center_vertical|center_horizontal" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="right"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/catego_label_2_3"
                            android:textSize="@dimen/small_label_size"
                            android:layout_gravity="right"
                            android:elegantTextHeight="false"
                            android:focusableInTouchMode="false"
                            android:gravity="center_vertical|right" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"
            android:elevation="14dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="3."
                        android:layout_gravity="left" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/label_size"
                        android:text="@string/catego_label_3"
                        android:paddingLeft="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/catego_detalle"
                        android:hint="Breve descriptcion del episodio de crisis"
                        android:isScrollContainer="true" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
